fixes search scrolling on mobile

--- a/assets/layouts/l-menu.sass
+++ b/assets/layouts/l-menu.sass
@@ -459,6 +459,7 @@
 
       .inner
         max-height: calc(100vh - var(--menu-height) - 56px)
+        overflow-y: auto
         @extend %md-scrollbar
 
       .nothing_found::before
